Fix flickering background on mobile view, fix footer display

--- a/LeonCam2/ClientApp/src/custom.css
+++ b/LeonCam2/ClientApp/src/custom.css
@@ -14,17 +14,15 @@ body {
     font-family: RobotoDraft, Roboto, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-image: url("/assets/background.svg");
+    background: url(/assets/background.svg) #1a3750;
     background-position: center top;
     background-size: cover;
     background-repeat: no-repeat;
 }
 
-@media only screen and (max-device-width: 768px) {
-    body {
-        background-image: unset;
-        background-color: whitesmoke;
-    }
+* {
+    -webkit-backface-visibility: hidden;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 footer ul {
